# timetable_app_0901

./: .gitignore  AGENTS.md  README.md  requirements.txt  timetable_app.py
.github/: copilot-instructions.md
.github/instructions/: flask-backend.instructions.md  frontend.instructions.md  timetable-data.instructions.md
app_core/: __init__.py  cache.py  config.py  news_service.py  schedule_service.py  timetable_loader.py  weather_service.py
rust/odpt_poller/: Cargo.toml
rust/odpt_poller/src/: main.rs
scripts/: benchmark_endpoints.py
static/: app.js  style.css
templates/: index.html
tests/: test_api_contract.py
timetable_data/: BUS_chotokuji_center.txt  BUS_chotokuji_saginuma.txt  MG_Hiyoshi.txt  OM_Mizonokuchi.txt  OM_Ooimachi.txt  timetable.xlsx  timetable2.xlsx  timetable_BL_weekday_Azamino.csv  timetable_BL_weekday_Shonandai.csv  timetable_BUS_holiday_CenterKita.csv  timetable_BUS_holiday_Saginuma.csv  timetable_BUS_saturday_CenterKita.csv  timetable_BUS_saturday_Saginuma.csv  timetable_BUS_weekday_CenterKita.csv  timetable_BUS_weekday_Saginuma.csv  timetable_MG_holiday_Hiyoshi.csv  timetable_MG_saturday_Meguro.csv  timetable_MG_weekday_Hiyoshi.csv  timetable_MG_weekday_Meguro.csv  timetable_OM_saturday_Mizonokuchi.csv  timetable_OM_saturday_Ooimachi.csv  timetable_OM_weekday_Mizonokuchi.csv  timetable_OM_weekday_Ooimachi.csv  timetable_TY_saturday_Shibuya.csv  timetable_TY_saturday_Yokohama.csv  timetable_TY_weekday_Shibuya.csv  timetable_TY_weekday_Yokohama.csv  timetablebus.xlsx  timetablebus2.xlsx  timetablebus3.xlsx
(+3 files in other folders)
